[gd_scene load_steps=8 format=3 uid="uid://boba8c07n0x1s"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_ojlo6"]
[ext_resource type="Script" path="res://Scripts/camera_movement.gd" id="2_j7hcf"]
[ext_resource type="Texture2D" uid="uid://cyaptnyli1up5" path="res://Sprites/icon.svg" id="2_ota31"]
[ext_resource type="PackedScene" uid="uid://coab6fguh2w1r" path="res://Scenes/background.tscn" id="2_p30c0"]
[ext_resource type="PackedScene" uid="uid://2c4hm7upjlu8" path="res://Scenes/invisibutton.tscn" id="3_kscrm"]
[ext_resource type="PackedScene" uid="uid://bksodmk1l2els" path="res://Scenes/boulder.tscn" id="4_qlg6m"]
[ext_resource type="PackedScene" uid="uid://b585dho7rmd1m" path="res://Scenes/gravity_control.tscn" id="5_8vg0p"]

[node name="Main" type="Node2D"]
script = ExtResource("1_ojlo6")

[node name="Background" parent="." instance=ExtResource("2_p30c0")]

[node name="Camera2D" type="Camera2D" parent="."]
z_index = 6
position = Vector2(-147, 0)
zoom = Vector2(0.25, 0.22)
script = ExtResource("2_j7hcf")

[node name="Pond*" type="Node" parent="."]

[node name="Trees*" type="Node" parent="Pond*"]

[node name="Tree1" type="Node2D" parent="Pond*/Trees*"]

[node name="Tree2" type="Node2D" parent="Pond*/Trees*"]

[node name="Tree3" type="Node2D" parent="Pond*/Trees*"]

[node name="X-Ray" type="Node2D" parent="Pond*/Trees*"]
position = Vector2(684, 232)

[node name="Sprite2D" type="Sprite2D" parent="Pond*/Trees*/X-Ray"]
texture = ExtResource("2_ota31")

[node name="X-RayButton" parent="Pond*/Trees*/X-Ray" instance=ExtResource("3_kscrm")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.0
offset_top = -64.0
offset_right = -55.0
offset_bottom = -56.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(16, 16)
size_flags_horizontal = 4

[node name="Sprayer" type="Node2D" parent="Pond*/Trees*"]

[node name="Hallucinations*" type="Node" parent="Pond*"]

[node name="Halu1" type="Node2D" parent="Pond*/Hallucinations*"]

[node name="Halu2" type="Node2D" parent="Pond*/Hallucinations*"]

[node name="Halu3" type="Node2D" parent="Pond*/Hallucinations*"]

[node name="Light" type="Node2D" parent="Pond*/Hallucinations*"]

[node name="Rune*" type="Node" parent="."]

[node name="Rocks*" type="Node" parent="Rune*"]

[node name="Boulder" parent="Rune*/Rocks*" instance=ExtResource("4_qlg6m")]
position = Vector2(-99, 0)
venus_pos = -20
moon_pos = -50

[node name="Boulder2" parent="Rune*/Rocks*" instance=ExtResource("4_qlg6m")]
position = Vector2(-291, 125)
earth_pos = 125
venus_pos = 105
moon_pos = 75

[node name="Boulder3" parent="Rune*/Rocks*" instance=ExtResource("4_qlg6m")]
position = Vector2(279, 125)
earth_pos = 125
venus_pos = 105
moon_pos = 75

[node name="Boulder4" parent="Rune*/Rocks*" instance=ExtResource("4_qlg6m")]
position = Vector2(90, 0)
venus_pos = -20
moon_pos = -50

[node name="GravityControl" parent="Rune*/Rocks*" instance=ExtResource("5_8vg0p")]
position = Vector2(134, 221)

[node name="GravLeft" parent="Rune*/Rocks*/GravityControl" instance=ExtResource("3_kscrm")]
offset_left = -37.0
offset_top = -7.0
offset_right = -29.0
offset_bottom = 1.0
scale = Vector2(1.74554, 1.72634)

[node name="GravRight" parent="Rune*/Rocks*/GravityControl" instance=ExtResource("3_kscrm")]
offset_left = 23.0
offset_top = -7.0
offset_right = 31.0
offset_bottom = 1.0
scale = Vector2(1.74554, 1.72634)

[node name="RuneRock*" type="Node" parent="Rune*"]

[node name="HummingStone" type="Node2D" parent="Rune*/RuneRock*"]

[node name="FreqSelect" type="Node2D" parent="Rune*/RuneRock*"]

[node name="Cabin*" type="Node" parent="."]

[node name="TpCabin" type="Node2D" parent="Cabin*"]

[node name="RecordPlayer" type="Node2D" parent="Cabin*"]

[connection signal="pressed" from="Pond*/Trees*/X-Ray/X-RayButton" to="." method="_on_x_ray_button_pressed"]
[connection signal="pressed" from="Rune*/Rocks*/GravityControl/GravLeft" to="." method="_on_grav_left_pressed"]
[connection signal="pressed" from="Rune*/Rocks*/GravityControl/GravRight" to="." method="_on_grav_right_pressed"]
